--- a/src/main/resources/templates/nyBruker.html
+++ b/src/main/resources/templates/nyBruker.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pet Match | Logg inn</title>
     <link rel="stylesheet" type="text/css" href="nyBruker.css">
@@ -15,7 +15,7 @@
 
     <header>
         <div class="headerNyBruker">
-            <p id="headerLoginTekst">Logg inn</p>
+            <p id="headerLoginTekst">Ny bruker</p>
         </div>
     </header>
 
