--- a/src/main/resources/templates/intropage.html
+++ b/src/main/resources/templates/intropage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pet Match | Ny bruker</title>
+    <title>Pet Match | Enkel omplassernig av dyr</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
@@ -13,7 +13,7 @@
 
     <header>
         <div class="headerNyBruker">
-            <img id="headerLogo" src="LogoPetMatch.png" alt="Pet Match logo">
+            <img id="headerLogo" src="image/LogoPetMatch.png" alt="Pet Match logo">
         </div>
     </header>
 
@@ -26,7 +26,7 @@
         </div>
 
         <div class="boxIntro">
-            <img id="introimg" src="intropic1.jpg" alt="Introbilde 1">
+            <img id="introimg" src="image/intropic1.jpg" alt="Introbilde 1">
 
         </div>
 
