Updated html and css

--- a/src/main/resources/static/stylesheet.css
+++ b/src/main/resources/static/stylesheet.css
@@ -15,6 +15,7 @@ header {
     justify-content: center;
     align-items: center;
     background-color: #ff914d;
+   /* background-color: black;*/
     height: 60px;
 }
 
