--- a/src/main/resources/templates/nyBruker.html
+++ b/src/main/resources/templates/nyBruker.html
@@ -5,7 +5,7 @@
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pet Match | Logg inn</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="../static/stylesheet.css">
 </head>
 
 </head>
