--- a/src/main/resources/static/stylesheet.css
+++ b/src/main/resources/static/stylesheet.css
@@ -8,6 +8,7 @@ body {
     width: 375px;
     margin: auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    /*Posisjonering av match hjertet*/
 }
 
 header {
@@ -16,35 +17,52 @@ header {
     align-items: center;
     background-color: #ff914d;
     color: white;
-    /* background-color: black;*/
+    width: 375px;
     height: 60px;
+
 }
+
+
 
 .formContainer {
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
-    margin: 10% 20%;
+    margin: 10% 18%;
     max-width: 100%;
 }
 
 input {
     width: 100%;
     margin: 10% 0;
-    border-radius: 20px;
-    border: 0.5px solid grey;
+    border-radius: 15px;
+    border: 0.3px solid grey;
     padding: 10px;
-
 }
 
-#loginButton {
-    border-radius: 20px;
+::placeholder{
+    color: #ff914d;
+    text-align: center;
+    opacity: 0.7;
+}
+
+#orangeButton {
+    border-radius: 15px;
     border: 0;
     padding: 10px;
-    width: 100%;
-    background-color: #302F2F;
+    width: 160px;
+    height: 40px;
+    background-color: #ff914d;
     color: white;
 }
+
+.arrow {
+
+}
+
+
+
 
 /*----------- GENERAL PROFILES ----------*/
 
@@ -54,13 +72,16 @@ input {
 }
 
 .containerProfiles {
-    margin: 0 auto;
+    margin: 0 30px;
     width: 85%;
+    /*Posisjonering av match hjertet*/
+    position: absolute;
+    top: 410px;
 }
 
 .prefH4 {
     margin-top: 15px;
-    margin-bottom: 0;
+    margin-bottom: 10px;
 }
 
 .iconContainer {
@@ -73,18 +94,14 @@ input {
     align-items: center;
 }
 
-
 /*-------- LOGIN STYLING ---------*/
-
 
 #headerLogo {
     height: 35px;
 }
 
 
-.arrow {
-    margin: 0 10px;
-}
+
 
 #introimg {
     height: auto;
@@ -110,12 +127,42 @@ input {
     color: white;
 }
 
+/*--------  NY BRUKER STYLING ---------*/
 
-/*-------- ANIMAL PROFILE STYLEING ---------*/
+#dineDetaljer {
+    font-size: 15px;
+    opacity: 0.6;
+    margin-top: 30px;
+    margin-bottom: 0;
+}
 
-#animalProfilGallery {
+#first {
+    margin-top: 10px;
+}
+
+/*-------- ANIMAL PROFILE STYLING ---------*/
+
+#animalGalleryDiv {
+    /*Posisjonering av match hjertet*/
+    position: absolute;
+    top: 0;
+
+}
+#redHeartDiv {
+    /*Posisjonering av match hjertet*/
+    position: absolute;
+    top: 324px;
+    left: 229px;
+}
+
+#redHeartIcon {
+    width: 150px;
+    height: 150px;
+}
+
+#animalProfileGallery {
     width: 375px;
-    height: 450px;
+    height: 400px;
     object-fit: cover;
 }
 
@@ -128,7 +175,6 @@ input {
 #animalAge {
     margin: 5px 20px;
     font-weight: 400;
-
 }
 
 #animalName {
@@ -137,14 +183,33 @@ input {
     font-weight: 400;
 }
 
+/*-------- USER PROFILE STYLING ---------*/
 
 
-/*-------- USER PROFILE STYLEING ---------*/
 
+#userPicNameDiv {
+    position: absolute;
+    top: 100px;
+    left: 100px;
+}
 #userPic {
     width: 150px;
     height: 150px;
     object-fit: cover;
     border-radius: 100px;
-
 }
+#userProfileLine {
+    position: absolute;
+    top: 320px;
+    width: 300px;
+    left: 35px;
+    border: 0.5px ridge;
+}
+
+#userBioContainer {
+    position: absolute;
+    top: 340px;
+    margin: 0 30px;
+    width: 85%;
+}
+
