--- a/src/main/resources/templates/dyr.html
+++ b/src/main/resources/templates/dyr.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Menu bar</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="indexHB.css">
+    <title>Pet Match | Dyr</title>
+
 </head>
 <body>
-
 
 </body>
 </html>
