--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pet Match | Logg inn</title>
-    <link rel="stylesheet" type="text/css" href="../static/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <title>Logg inn</title>
 </head>
 
@@ -15,7 +15,7 @@
 
     <header>
         <div class="headerLogin">
-            <p id="headerLoginTekst">Logg inn</p>
+            <p id="headerLoginTekst">Velkommen</p>
         </div>
     </header>
 
@@ -29,7 +29,7 @@
            
                 <input id="passord" type="password" placeholder="Passord" required>
           
-                <input id="loginButton" type="submit" value="Logg inn">
+                <input id="orangeButton" type="submit" value="Logg inn">
            
         </div>
     </form>
