--- a/src/main/resources/templates/nyBruker.html
+++ b/src/main/resources/templates/nyBruker.html
@@ -21,8 +21,8 @@
 
 <!-------- FORM NEW USER -------->
 
-<div class="arrow">
-    <p>&#8826</p>
+<div class="arrow"¨>
+    <a href="/intropage"><p>&#8826</p></a>
 </div>
 
 <form th:object="${user}" action="/registrer" method="post">
