--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -19,51 +19,55 @@
 <!-------- USER PICTURE + NAME -------->
 
 
-    <div id="userPicNameDiv">
-        <img id="userPic" src="image/dummyDog.jfif" alt="">
-        <h3>Kristine Hansen</h3>
-    </div>
-
-    <hr id="userProfileLine">
-
-    <!-------- USER BIO + PREFERENCES -------->
-
-    <div id="userBioContainer">
-        <div>
-            <p>Lorem Ipsum er rett og slett dummytekst fra
-                og for trykkeindustrien. Lorem Ipsum har
-                vært bransjens standard for dummytekst helt
-                siden 1500-tallet, da en ukjent boktrykker
-                stokket en mengde bokstaver
-                for å lage et prøveeksemplar av en bok.
-            </p>
-        </div>
-
-        <div class="locationBopelContainer">
-            <img class="prefIcons" src="image/lokasjon.png" alt="Lokasjon">
-            <p>Oslo</p>
-        </div>
-
-        <div class="locationBopelContainer">
-            <img class="prefIcons" src="image/bopel.png" alt="Bopel">
-            <p>Leilighet</p>
-        </div>
-
-
-        <div>
-            <h4 class="prefH4">Preferanser</h4>
-
-            <div class="iconContainer">
-                <img class="prefIcons" src="image/kid.png" alt="">
-                <img class="prefIcons" src="image/male.png" alt="">
-                <img class="prefIcons" src="image/female.png" alt="">
-                <img class="prefIcons" src="image/chip.png" alt="">
-                <img class="prefIcons" src="image/vaksine.png" alt="">
-                <img class="prefIcons" src="image/scissor.png" alt="">
-            </div>
-        </div>
+<div id="userPicNameDiv">
+    <img id="userPic" src="image/dummyDog.jfif" alt="">
+    <h3>Kristine Hansen</h3>
 </div>
 
+<hr id="userProfileLine">
+
+<!-------- USER BIO + PREFERENCES -------->
+
+<div id="userBioContainer">
+    <div>
+        <p>Lorem Ipsum er rett og slett dummytekst fra
+            og for trykkeindustrien. Lorem Ipsum har
+            vært bransjens standard for dummytekst helt
+            siden 1500-tallet, da en ukjent boktrykker
+            stokket en mengde bokstaver
+            for å lage et prøveeksemplar av en bok.
+        </p>
+    </div>
+
+    <div class="locationBopelContainer">
+        <img class="prefIcons" src="image/lokasjon.png" alt="Lokasjon">
+        <p>Oslo</p>
+    </div>
+
+    <div class="locationBopelContainer">
+        <img class="prefIcons" src="image/bopel.png" alt="Bopel">
+        <p>Leilighet</p>
+    </div>
+
+
+    <div>
+        <h4 class="prefH4">Preferanser</h4>
+
+        <div class="iconContainer">
+            <img class="prefIcons" src="image/kid.png" alt="">
+            <img class="prefIcons" src="image/male.png" alt="">
+            <img class="prefIcons" src="image/female.png" alt="">
+            <img class="prefIcons" src="image/chip.png" alt="">
+            <img class="prefIcons" src="image/vaksine.png" alt="">
+            <img class="prefIcons" src="image/scissor.png" alt="">
+        </div>
+    </div>
+</div>
+
+
+<!--<footer>
+    <div th:replace="templates :: menu"></div>
+</footer>-->
 
 </body>
 
