Added registration for new users

--- a/src/main/resources/templates/intropage.html
+++ b/src/main/resources/templates/intropage.html
@@ -47,7 +47,7 @@
 
     <div class="containerLoginSignup">
     <div class="Login">
-        <a class="buttonNoColor" href="nyBruker.html">Logg inn</a>
+        <a class="buttonNoColor" href="reg1_newUser.html">Logg inn</a>
     </div>
 
     <div class="NyBruker">
