--- a/src/main/resources/templates/reg2_userType.html
+++ b/src/main/resources/templates/reg2_userType.html
@@ -5,15 +5,15 @@
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pet Match | Logg inn</title>
-    <link rel="stylesheet" type="text/css" href="../static/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
 </head>
 
 <body>
     <div class="optionType">
-        <a href="/"><p id="buyer" class="activeOption">Kjøpe dyr</p></a>
-        <a href="/nyttdyr"><p id="seller" class="activeOption">Selge dyr</p></a>
+        <a href="/kjoper"><p id="buyer" class="option">Kjøpe dyr</p></a>
+        <a href="/nyttdyr"><p id="seller" class="option">Selge dyr</p></a>
     </div>
 </body>
 
