--- a/src/main/resources/templates/intropage.html
+++ b/src/main/resources/templates/intropage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
 
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
