--- a/src/main/resources/templates/intropage.html
+++ b/src/main/resources/templates/intropage.html
@@ -47,11 +47,11 @@
 
 <div class="containerLoginSignup">
     <div class="Login">
-        <a class="buttonNoColor" href="/loggInn">Logg inn</a>
+        <a class="loginSignupButtonAtag" href="/login">Logg inn</a>
     </div>
 
     <div class="NyBruker">
-        <a class="buttonNoColor" href="/registrer">Ny bruker</a>
+        <a class="loginSignupButtonAtag" href="/registrer">Ny bruker</a>
     </div>
 
 </div>
