--- a/src/main/resources/static/stylesheet.css
+++ b/src/main/resources/static/stylesheet.css
@@ -6,6 +6,7 @@
 
 body {
     width: 375px;
+    height: 812px;
     margin: auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     /*Posisjonering av match hjertet*/
@@ -19,7 +20,6 @@ header {
     color: white;
     width: 375px;
     height: 60px;
-
 }
 
 .formContainer {
@@ -27,9 +27,10 @@ header {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 10% 18%;
+    margin: 0 18%;
     max-width: 100%;
 }
+
 
 input {
     width: 100%;
@@ -39,7 +40,7 @@ input {
     padding: 10px;
 }
 
-::placeholder{
+::placeholder {
     color: #ff914d;
     text-align: center;
     opacity: 0.7;
@@ -55,7 +56,7 @@ input {
     color: white;
 }
 
-a {
+.loginSignupButtonAtag {
     border-radius: 15px;
     border: 0;
     padding: 10px;
@@ -67,8 +68,19 @@ a {
     text-decoration: none;
 }
 
-.arrow {
+a, a:link:active, a:visited:active {
+    text-decoration: none;
+    color: black;
+}
 
+.leftArrowAtag {
+    display: inline-block;
+    margin-top: 26px;
+    margin-left: 40px;
+}
+
+#arrowPtag {
+    font-weight: bold;
 }
 
 /*----------- GENERAL PROFILES ----------*/
@@ -95,6 +107,7 @@ a {
     display: flex;
     flex-wrap: wrap;
 }
+
 .locationBopelContainer {
     display: flex;
     flex-wrap: wrap;
@@ -116,6 +129,7 @@ a {
     display: flex;
     justify-content: center;
 }
+
 /*
 .introTekst {
     text-align: center;
@@ -129,8 +143,7 @@ a {
 }
 
 
-
-/*--------  NY BRUKER STYLING ---------*/
+/*--------  reg1_newUser STYLING ---------*/
 
 #dineDetaljer {
     font-size: 15px;
@@ -143,7 +156,7 @@ a {
     margin-top: 10px;
 }
 
-/*-------- ANIMAL PROFILE STYLING ---------*/
+/*-------- animalProfile STYLING ---------*/
 
 #animalGalleryDiv {
     /*Posisjonering av match hjertet*/
@@ -151,6 +164,7 @@ a {
     top: 0;
 
 }
+
 #redHeartDiv {
     /*Posisjonering av match hjertet*/
     position: absolute;
@@ -188,19 +202,19 @@ a {
 
 /*-------- USER PROFILE STYLING ---------*/
 
-
-
 #userPicNameDiv {
     position: absolute;
     top: 100px;
     left: 100px;
 }
+
 #userPic {
     width: 150px;
     height: 150px;
     object-fit: cover;
     border-radius: 100px;
 }
+
 #userProfileLine {
     position: absolute;
     top: 320px;
@@ -216,11 +230,91 @@ a {
     width: 85%;
 }
 
+/*-------- buyerAllAnimalsView/Matches STYLING ---------*/
+.dyrMatchHeaderDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+}
+
+.Active {
+    border: 2px solid whitesmoke;
+    padding: 3px;
+    width: 140px;
+    height: 30px;
+    color: #ff914d;
+    font-size: 15px;
+    text-decoration: none;
+    background-color: white;
+}
+
+.NotActive {
+    border: 0;
+    padding: 5px;
+    width: 140px;
+    height: 30px;
+    color: #ff914d;
+    font-size: 15px;
+    text-decoration: none;
+    background-color: whitesmoke;
+}
+
+.textInActiveNotActive {
+    margin: 0;
+    text-align: center;
+}
+
+.animalMatchesContainer {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.animalMatchesPicIcon {
+    position: relative;
+    width: 187px;
+}
+
+.animalMatchesPic {
+    width: 188px;
+    height: 230px;
+    object-fit: cover;
+    border-radius: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 3px;
+}
+
+.heartIconStyle {
+    position: absolute;
+    width: 53px;
+    left: 124px;
+    top: 174px;
+}
+
+.animalMatchesTextStyle {
+    position: absolute;
+    margin: 0;
+    left: 19px;
+    bottom: 24px;
+    color: white;
+}
+
+
 /*-------- FOOTER  STYLING ---------*/
+
+.menu {
+    position: fixed;
+    top: 760px;
+    width: 100%;
+    height: 70px;
+    z-index: 1;
+    background-color: white;
+
+}
 
 .menuImage {
     width: 42px;
-    margin-top: 756px;
     margin-left: 40px;
 }
 
@@ -255,4 +349,8 @@ a {
     background-color: bisque;
     border: 1px solid orange;
     border-radius: 20px;
+}
+
+.menu{
+    position: fixed;
 }
