--- a/src/main/resources/templates/buyerAllAnimalsView.html
+++ b/src/main/resources/templates/buyerAllAnimalsView.html
@@ -19,83 +19,11 @@
 <!-------- MAIN -------->
 
 <div class="animalMatchesContainer">
-    <div>
-        <div class="animalMatchesPicIcon">
-            <img class="animalMatchesPic" src="image/dummyDog.jfif" alt="">
-            <!-- <p><span th:text="${animal.getName}"></span></p>-->
-            <p class="animalMatchesTextStyle">Kira</p>
-            <img class="heartIconStyle" src="image/heartOutline.png" alt="">
-        </div>
-    </div>
 
-    <div>
-        <div class="animalMatchesPicIcon">
+    <div th:each="animal : ${allAnimals}" >
+        <div  class="animalMatchesPicIcon">
             <img class="animalMatchesPic" src="image/dummyDog.jfif" alt="">
-            <!-- <p><span th:text="${animal.getName}"></span></p>-->
-            <p class="animalMatchesTextStyle">Kira</p>
-            <img class="heartIconStyle" src="image/heartOutline.png" alt="">
-        </div>
-    </div>
-
-    <div>
-        <div class="animalMatchesPicIcon">
-            <img class="animalMatchesPic" src="image/dummyDog.jfif" alt="">
-            <!-- <p><span th:text="${animal.getName}"></span></p>-->
-            <p class="animalMatchesTextStyle">Kira</p>
-            <img class="heartIconStyle" src="image/heartOutline.png" alt="">
-        </div>
-    </div>
-
-    <div>
-        <div class="animalMatchesPicIcon">
-            <img class="animalMatchesPic" src="image/dummyDog.jfif" alt="">
-            <!-- <p><span th:text="${animal.getName}"></span></p>-->
-            <p class="animalMatchesTextStyle">Kira</p>
-            <img class="heartIconStyle" src="image/heartOutline.png" alt="">
-        </div>
-    </div>
-
-    <div>
-        <div class="animalMatchesPicIcon">
-            <img class="animalMatchesPic" src="image/dummyDog.jfif" alt="">
-            <!-- <p><span th:text="${animal.getName}"></span></p>-->
-            <p class="animalMatchesTextStyle">Kira</p>
-            <img class="heartIconStyle" src="image/heartOutline.png" alt="">
-        </div>
-    </div>
-
-    <div>
-        <div class="animalMatchesPicIcon">
-            <img class="animalMatchesPic" src="image/dummyDog.jfif" alt="">
-            <!-- <p><span th:text="${animal.getName}"></span></p>-->
-            <p class="animalMatchesTextStyle">Kira</p>
-            <img class="heartIconStyle" src="image/heartOutline.png" alt="">
-        </div>
-    </div>
-
-    <div>
-        <div class="animalMatchesPicIcon">
-            <img class="animalMatchesPic" src="image/dummyDog.jfif" alt="">
-            <!-- <p><span th:text="${animal.getName}"></span></p>-->
-            <p class="animalMatchesTextStyle">Kira</p>
-            <img class="heartIconStyle" src="image/heartOutline.png" alt="">
-        </div>
-    </div>
-
-    <div>
-        <div class="animalMatchesPicIcon">
-            <img class="animalMatchesPic" src="image/dummyDog.jfif" alt="">
-            <!-- <p><span th:text="${animal.getName}"></span></p>-->
-            <p class="animalMatchesTextStyle">Kira</p>
-            <img class="heartIconStyle" src="image/heartOutline.png" alt="">
-        </div>
-    </div>
-
-    <div>
-        <div class="animalMatchesPicIcon">
-            <img class="animalMatchesPic" src="image/dummyDog.jfif" alt="">
-            <!-- <p><span th:text="${animal.getName}"></span></p>-->
-            <p class="animalMatchesTextStyle">Kira</p>
+            <p class="animalMatchesTextStyle" th:text="${animal.name}">Kira</p>
             <img class="heartIconStyle" src="image/heartOutline.png" alt="">
         </div>
     </div>
