--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,9 +22,9 @@
     <!-------- FORM LOGIN -------->
     <a class="leftArrowAtag" href="/"><p id="arrowPtag">&#60;</p></a>
 
-    <form action="/login" method="post" th:object="${user}">
+    <form action="/login" method="post" >
         <div class="formContainer">
-                <input id="epost" th:field="*{email}" type="email" placeholder="E-post" required autofocus>
+                <input id="epost" name="email" type="email" placeholder="E-post" required autofocus>
                 <input id="passord" name="password" type="password" placeholder="Passord" required>
                 <input id="orangeButton" type="submit" value="Logg inn">
         </div>
