Updated user login

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,7 +25,7 @@
     <form action="/login" method="post" >
         <div class="formContainer">
                 <input id="epost" name="email" type="email" placeholder="E-post" required autofocus>
-                <input id="passord" name="password" type="password" placeholder="Passord" required>
+                <input id="passord" name="password" type="text" placeholder="Passord" required>
                 <input id="orangeButton" type="submit" value="Logg inn">
         </div>
     </form>
