Connected buyerAllAnimalsView with animalProfile

--- a/src/main/resources/templates/animalProfile.html
+++ b/src/main/resources/templates/animalProfile.html
@@ -3,61 +3,58 @@
 <head>
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
     <title>Pet Match | Profil</title>
 </head>
 <body>
 <!-------- ANIMAL GALLERY + MATCH HEART -------->
-    <div id="animalGalleryDiv">
-        <img id="animalProfileGallery" src="image/dummyDog.jfif" alt="">
+<div id="animalGalleryDiv">
+    <img id="animalProfileGallery" src="../image/dummyDog.jfif" alt="">
+</div>
+
+<div id="redHeartDiv">
+    <img id="redHeartIcon" src="../image/redHeart.png" alt="Match heart">
+</div>
+
+<!-------- ANIMAL NAME + AGE -------->
+<div class="containerProfiles">
+
+    <div id="animalNameAge">
+        <h1 id="animalName" th:text="${animal.name}">Chico</h1>
+        <h3 id="animalAge" th:text="${animal.age}">0.5 år</h3>
     </div>
 
-    <div id="redHeartDiv">
-        <img id="redHeartIcon" src="image/redHeart.png" alt="Match heart">
+    <!-------- ANIMAL BIO + PREFERENCES -------->
+
+    <div id="animalBio">
+        <p th:text="${animal.bio}">Lorem Ipsum er rett og slett dummytekst fra
+            og for trykkeindustrien. Lorem Ipsum har
+            vært bransjens standard for dummytekst helt
+            siden 1500-tallet, da en ukjent boktrykker
+            stokket en mengde bokstaver
+            for å lage et prøveeksemplar av en bok.
+        </p>
     </div>
 
-    <!-------- ANIMAL NAME + AGE -------->
-    <div class="containerProfiles">
 
-        <div id="animalNameAge">
-            <h1 id="animalName">Chico</h1>
-            <h3 id="animalAge">0.5 år</h3>
-        </div>
+    <div class="locationBopelContainer">
+        <img class="prefIcons" src="../image/lokasjon.png" alt="Lokasjon">
+        <p th:text="${theAnimalUser.municipality}">Oslo</p>
+    </div>
 
-        <!-------- ANIMAL BIO + PREFERENCES -------->
+    <div>
+        <h4 class="prefH4">Preferanser</h4>
 
-        <div id="animalBio">
-            <p>Lorem Ipsum er rett og slett dummytekst fra
-                og for trykkeindustrien. Lorem Ipsum har
-                vært bransjens standard for dummytekst helt
-                siden 1500-tallet, da en ukjent boktrykker
-                stokket en mengde bokstaver
-                for å lage et prøveeksemplar av en bok.
-            </p>
-        </div>
-        <div class="locationBopelContainer">
-            <img class="prefIcons" src="image/lokasjon.png" alt="Lokasjon">
-            <p>Oslo</p>
-        </div>
-
-        <div class="locationBopelContainer">
-            <img class="prefIcons" src="image/bopel.png" alt="Bopel">
-            <p>Leilighet</p>
-        </div>
-
-        <div>
-            <h4 class="prefH4">Preferanser</h4>
-
-            <div class="iconContainer">
-                <img class="prefIcons" src="image/kid.png" alt="">
-                <img class="prefIcons" src="image/male.png" alt="">
-                <img class="prefIcons" src="image/female.png" alt="">
-                <img class="prefIcons" src="image/chip.png" alt="">
-                <img class="prefIcons" src="image/vaksine.png" alt="">
-                <img class="prefIcons" src="image/scissor.png" alt="">
-            </div>
+        <div class="iconContainer">
+            <img class="prefIcons" src="../image/kid.png" alt="">
+            <img class="prefIcons" src="../image/male.png" alt="">
+            <img class="prefIcons" src="../image/female.png" alt="">
+            <img class="prefIcons" src="../image/chip.png" alt="">
+            <img class="prefIcons" src="../image/vaksine.png" alt="">
+            <img class="prefIcons" src="../image/scissor.png" alt="">
         </div>
     </div>
+</div>
 
 </body>
 </html>
