--- a/src/main/resources/templates/sellersAnimalLikes.html
+++ b/src/main/resources/templates/sellersAnimalLikes.html
@@ -4,9 +4,20 @@
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <title>Pet Match | Likt ditt dyr</title>
+    <title>Pet Match | Ditt dyr</title>
 </head>
 <body>
+
+<!-------- ANIMAL GALLERY + arrows -------->
+<div id="animalGalleryDiv">
+    <a class="leftArrowAtag" href="/"><p id="arrowPtag">&#60;</p></a>
+    <img id="animalProfileGallery" src="image/dummyDog.jfif" alt="">
+</div>
+
+<div id="redHeartDiv">
+    <a class="leftArrowAtagWhite" href="/"><p id="arrowPtag">&#60;</p></a>
+</div>
+
 
 </body>
 </html>
