Updated animalProfile and buyerAllAnimalsView

--- a/src/main/resources/templates/animalProfile.html
+++ b/src/main/resources/templates/animalProfile.html
@@ -9,7 +9,7 @@
 <body>
 <!-------- ANIMAL GALLERY + MATCH HEART -------->
 <div id="animalGalleryDiv">
-    <img id="animalProfileGallery" src="../image/dummyDog.jfif" alt="">
+    <img id="animalProfileGallery" th:src="${animal.getAnimalImg1()}" alt="">
 </div>
 
 <div id="redHeartDiv">
