--- a/src/main/resources/static/stylesheet.css
+++ b/src/main/resources/static/stylesheet.css
@@ -300,11 +300,7 @@ a, a:link:active, a:visited:active {
     color: white;
 }
 
-
-
-
-
-/*-------- SellersAnimalLikes/animals -------*/
+/*-------- SellersAnimalLikes/animalsView -------*/
 
 #animalProfileGallerySeller {
     position: relative;
@@ -323,10 +319,34 @@ a, a:link:active, a:visited:active {
 }
 
 
+
+
+
+
+.animalsViewContainer {
+    display: flex;
+    flex-wrap: wrap;
+    width: 375px;
+}
+
+#sellerViewAnimalPic {
+    object-fit: cover;
+    width: 300px;
+    height: 150px;
+}
+
+#textIconContainer {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+
 /*-------- FOOTER  STYLING ---------*/
 
 .menu {
     position: fixed;
+
     top: 760px;
     width: 100%;
     height: 70px;
