--- a/src/main/resources/templates/sellersAnimalLikes.html
+++ b/src/main/resources/templates/sellersAnimalLikes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
     <title>Pet Match | Ditt dyr</title>
 </head>
 <body>
@@ -13,8 +13,8 @@
 
 <!-------- ANIMAL GALLERY + arrow -------->
 <div id="sellerAnimalLikesGalleryContainer">
-    <a class="leftArrowAtagWhite" href="/"><p id="arrowPtag">&#60;</p></a>
-    <img id="animalProfileGallerySeller" src="image/dummyDog.jfif" alt="">
+    <a class="leftArrowAtagWhite" th:href="'/sellersAnimalsView'"><p id="arrowPtag">&#60;</p></a>
+    <img id="animalProfileGallerySeller" th:src="${animal.getAnimalImg1()}" alt="">
 </div>
 
 <!-------- ANIMAL NAME + AGE -------->
@@ -39,7 +39,7 @@
 
 
     <div class="locationBopelContainer">
-        <img class="prefIcons" src="image/lokasjon.png" alt="Lokasjon">
+        <img class="prefIcons" src="../image/lokasjon.png" alt="Lokasjon">
         <p th:text="${theAnimalUser.municipality}">Oslo</p>
     </div>
 
@@ -47,12 +47,12 @@
         <h4 class="prefH4">Preferanser</h4>
 
         <div class="iconContainer">
-            <img class="prefIcons" src="image/kid.png" alt="">
-            <img class="prefIcons" src="image/male.png" alt="">
-            <img class="prefIcons" src="image/female.png" alt="">
-            <img class="prefIcons" src="image/chip.png" alt="">
-            <img class="prefIcons" src="image/vaksine.png" alt="">
-            <img class="prefIcons" src="image/scissor.png" alt="">
+            <img class="prefIcons" src="../image/kid.png" alt="">
+            <img class="prefIcons" src="../image/male.png" alt="">
+            <img class="prefIcons" src="../image/female.png" alt="">
+            <img class="prefIcons" src="../image/chip.png" alt="">
+            <img class="prefIcons" src="../image/vaksine.png" alt="">
+            <img class="prefIcons" src="../image/scissor.png" alt="">
         </div>
     </div>
 </div>
