--- a/src/main/resources/templates/sellersAnimalsView.html
+++ b/src/main/resources/templates/sellersAnimalsView.html
@@ -3,10 +3,55 @@
 <head>
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
     <title>Pet Match | Dine dyr</title>
 </head>
 <body>
+
+<!----------- HEADER ----------->
+<header>
+    <div class="headerLogin">
+        <p id="headerLoginTekst">Dine dyr</p>
+    </div>
+</header>
+
+<!-------- MENU -------->
+<!--<div class="menu" th:include="templates :: menu"></div>-->
+
+<!-------- MAIN -------->
+
+<div class="animalsViewContainer">
+
+    <div th:each="eachAnimal : ${allAnimals}">
+
+        <a th:href="'/sellersAnimalLikes/' + ${eachAnimal.id}">
+            <img id="sellerViewAnimalPic" th:src="${eachAnimal.getAnimalImg1()}" alt="">
+        </a>
+
+        <div id="textIconContainer">
+            <p>Kira</p>
+            <img class="heartIconStyle" src="image/redHeart.png" alt="">
+        </div>
+
+
+    </div>
+
+</div>
+
+
+<!--<div class="animalsViewContainer">
+    <div th:each="eachAnimal : ${allAnimals}">
+        <div class="animalPic">
+            <a th:href="'/sellersAnimalLikes/' + ${eachAnimal.id}">
+                <img class="animalViewPic" th:src="${eachAnimal.getAnimalImg1()}" alt="">
+                <div id="boxContainerTextIcon">
+                    <p>Kira 2 år</p>
+                    <img class="heartIconStyle" src="image/redHeart.png" alt="">
+                </div>
+            </a>
+        </div>
+    </div>
+</div>-->
 
 </body>
 </html>
